Se añadieron las secciones basicas para probar el funcionamiento de astro y las cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
+import Projects from '../components/Projects.astro'; // <--- Importar
 ---
 
 <Layout title="Nahu | Portfolio">
 	<main>
 		<Hero />
-		</main>
+		<Projects /> </main>
 </Layout>
