--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -45,7 +45,7 @@ const PROJECTS = [
 ];
 ---
 
-<section id="proyectos" class="py-20 bg-chess-dark relative">
+<section id="proyectos" class="py-20">
   <div class="max-w-6xl mx-auto px-4">
     
     <h2 class="text-4xl font-bold text-white mb-8 text-center">
