--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props;
 	
 	<body class="font-sans text-white relative bg-chess-dark">
         
-        <div class="fixed inset-0 z-0 pointer-events-none">
+        <div class="fixed inset-0 z-0">
             <Particles id="tsparticles" options={particlesConfig} />
         </div>
 
@@ -38,7 +38,6 @@ const { title } = Astro.props;
             import { tsParticles } from "tsparticles-engine";
             import { loadSlim } from "tsparticles-slim";
 
-            // Esta función se ejecuta apenas carga el navegador
             (async () => {
                 await loadSlim(tsParticles);
             })();
@@ -51,3 +50,12 @@ const { title } = Astro.props;
         </div>
 	</body>
 </html>
+
+<style is:global>
+    body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        overflow-x: hidden; /* Evita scroll horizontal accidental */
+    }
+</style>
