--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,18 @@
 ---
+// src/pages/index.astro
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
-import About from '../components/About.astro'; // <--- Nuevo
-import Skills from '../components/Skills.astro'; // <--- Nuevo
+import About from '../components/About.astro';
+import Certificates from '../components/Certificates.astro'; // <--- IMPORTANTE: Importamos el archivo
+import Skills from '../components/Skills.astro';
 ---
 
 <Layout title="Nahu | Portfolio">
 	<main>
 		<Hero />
 		<Projects />
-        <About /> <Skills />
+        <About />
+        <Certificates /> <Skills />
 	</main>
 </Layout>
