--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,9 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
 import About from '../components/About.astro';
-import Certificates from '../components/Certificates.astro'; // <--- IMPORTANTE: Importamos el archivo
+import Certificates from '../components/Certificates.astro';
 import Skills from '../components/Skills.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Nahu | Portfolio">
@@ -13,6 +14,8 @@ import Skills from '../components/Skills.astro';
 		<Hero />
 		<Projects />
         <About />
-        <Certificates /> <Skills />
+        <Certificates />
+        <Skills />
+        <Contact />
 	</main>
 </Layout>
